variables.Variables.scala.error
Compilation error:
Variables:6: error: value pickupBaggle is not a member of Unit
possible cause: maybe a semicolon is missing before `value pickupBaggle'?
} pickupBaggle()
  ^