variables.Variables.scala.code
var stepAmount:Int=0
var doneSteps:Int=0
while(!isOverBaggle()){
  forward()
  stepAmount = stepAmount + 1
} pickupBaggle()
while (doneSteps!=stepAmount){
  backward()
}